--- a/index.html
+++ b/index.html
@@ -23,20 +23,30 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><div class="text">Home</div></a>
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <div class="text">Home</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><div class="text">PROTFOLIO</div></a>
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <div class="text">PROTFOLIO</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><div class="text">CONTACT</div></a>
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <div class="text">CONTACT</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><div class="text">ADDRESS</div></a>
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <div class="text">ADDRESS</div>
+                        </a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button type="button" class="btn1"><div class="text">Register</div></button>
+                    <button type="button" class="btn1">
+                        <div class="text">Register</div>
+                    </button>
                 </form>
             </div>
         </div>
@@ -58,7 +68,7 @@
 
         <div class="card-body">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:400px">
                             <br>
@@ -70,7 +80,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:400px">
                             <br>
@@ -85,7 +95,7 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:400px">
                             <br>
@@ -97,7 +107,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:400px">
                             <br>
@@ -119,7 +129,7 @@
         <br>
         <div class="crad-body">
             <div class="row">
-                <div class="col-4">
+                <div class="col-xl-4 col-md-12">
                     <center>
                         <img src="picPHONE.webp" alt="" width="300px">
                         <center>
@@ -127,7 +137,7 @@
                         </center>
                     </center>
                 </div>
-                <div class="col-4">
+                <div class="col-xl-4 col-md-12">
                     <center>
                         <img src="picMail.png" alt="" width="410px">
                         <center>
@@ -135,7 +145,7 @@
                         </center>
                     </center>
                 </div>
-                <div class="col-4">
+                <div class="col-xl-4 col-md-12">
                     <center>
                         <img src="picAdd.png" alt="" width="300px">
                         <center>
@@ -157,7 +167,7 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -169,7 +179,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -190,7 +200,7 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -203,7 +213,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -224,7 +234,7 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -238,7 +248,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <center>
                         <div class="card" style="width:600px">
                             <br>
@@ -260,12 +270,13 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-12">
+                <div class="col-xl-12">
                     <center>
                         <div class="card" style="width:1600px">
                             <div class="card-body">
                                 <h1 class="card-title">- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h1>
-                                <h1 class="card-title">- พื้นฐาน Graphic (Adobe Photoshop,Adobe illustrator,Blender)</h1>
+                                <h1 class="card-title">- พื้นฐาน Graphic (Adobe Photoshop,Adobe illustrator,Blender)
+                                </h1>
                             </div>
                         </div>
                     </center>
