--- a/index.html
+++ b/index.html
@@ -17,36 +17,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-sm ">
         <div class="container-fluid">
-            <h1 class="haedText">PROTFOLIO</h1>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <a class="navbar-brand" href="javascript:void(0)"><h1>PROTFOLIO</h1></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <div class="text">Home</div>
-                        </a>
+                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">HOME</div></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <div class="text">PROTFOLIO</div>
-                        </a>
+                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">PROTFOLIO</div></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <div class="text">CONTACT</div>
-                        </a>
+                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">CONTACT</div></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <div class="text">ADDRESS</div>
-                        </a>
+                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">ADDRESS</div></a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <button type="button" class="btn1">
-                        <div class="text">Register</div>
-                    </button>
+                <form class="d-flex">
+                    <button class="btn1" type="button">Register</button>
                 </form>
             </div>
         </div>
