--- a/HOME.html
+++ b/HOME.html
@@ -27,12 +27,12 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">
+                        <a class="nav-link" href="HOME.html">
                             <div class="textNav">HOME</div>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">
+                        <a class="nav-link" href="index.html">
                             <div class="textNav">PROTFOLIO</div>
                         </a>
                     </li>
