--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">HOME</div></a>
+                        <a class="nav-link" href="HOME.html"><div class="textNav">HOME</div></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">PROTFOLIO</div></a>
+                        <a class="nav-link" href="index.html"><div class="textNav">PROTFOLIO</div></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)"><div class="textNav">CONTACT</div></a>
