--- a/HOME.html
+++ b/HOME.html
@@ -55,7 +55,9 @@
     </nav>
 
     <div class="pic1">
-        <center><button class="btn2" type="button">Join Today</button></center>
+        <div class="btnConfig">
+            <center><button class="btn2" type="button">Join Today</button></center>
+        </div>
     </div>
 
     <img src="picBlack.png" alt="" width="100%" height="30px">
@@ -78,16 +80,45 @@
                                 quisquam est, qui dolorem.</p>
                         </div>
                     </div>
-                    <div class="btn">
-                        <button class="btn3" type="button">Join Today</button>
-                    </div>
-                    
+                    <center>
+                        <div class="btn">
+                            <button class="btn3" type="button">Join Today</button>
+                        </div>
+                    </center>
                 </div>
             </div>
         </div>
     </div>
 
     <img src="picBlack.png" alt="" width="100%" height="30px">
+
+    <div class="bgpic">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="text">
+                        <h1>Sed ut perspiciatis unde omnis</h1>
+                        <div class="text2">
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+                                aut odit aut fugit, sed quia consequuntur magni dolores
+                                eos qui ratione voluptatem sequi nesciunt. Neque porro
+                                quisquam est, qui dolorem.</p>
+                        </div>
+                    </div>
+                    <center>
+                        <div class="btn">
+                            <button class="btn3" type="button">Join Today</button>
+                        </div>
+                    </center>
+                </div>
+                <div class="col-6">
+                    <div class="img">
+                        <img src="picPepslBlue.webp" alt="" height="500px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
