--- a/HOME.html
+++ b/HOME.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-sm ">
         <div class="container-fluid">
             <a class="navbar-brand" href="javascript:void(0)">
-                <h1>PROTFOLIO</h1>
+                <img src="piclogo.png" alt="" width="50px" height="50px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -65,12 +65,12 @@
     <div class="bgpic">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <div class="img">
                         <img src="picZero.png" alt="" height="500px">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <div class="text">
                         <h1>Sed ut perspiciatis unde omnis</h1>
                         <div class="text2">
@@ -95,7 +95,7 @@
     <div class="bgpic">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <div class="text">
                         <h1>Sed ut perspiciatis unde omnis</h1>
                         <div class="text2">
@@ -111,7 +111,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-md-12">
                     <div class="img">
                         <img src="picPepslBlue.webp" alt="" height="500px">
                     </div>
@@ -119,6 +119,36 @@
             </div>
         </div>
     </div>
+
+    <img src="picBlack.png" alt="" width="100%" height="30px">
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12">
+                    <img src="piclogo.png" alt="" width="50px" height="50px">
+                </div>
+                <div class="col-2">
+                    <div class="textF1">
+                        <h1>PEPSL</h1>
+                    </div>
+                </div> 
+                <div class="col-xl-2 col-md-6 col-sm-12">
+                    <p>Mobile app</p>
+                </div> 
+                <div class="col-xl-2 col-md-6 col-sm-12">
+                    <p>Community</p>
+                </div> 
+                <div class="col-xl-2 col-md-6 col-sm-12">
+                    <p>Conpany</p>
+                </div> 
+                <div class="col-xl-2 col-md-6 col-sm-12">
+                    <p>Website by Tiradonpermpoonma</p>
+                </div> 
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
