--- a/index.html
+++ b/index.html
@@ -19,23 +19,33 @@
 <body>
     <nav class="navbar navbar-expand-sm ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="javascript:void(0)"><h1>PROTFOLIO</h1></a>
+            <a class="navbar-brand" href="javascript:void(0)">
+                <h1>PROTFOLIO</h1>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="HOME.html"><div class="textNav">HOME</div></a>
+                        <a class="nav-link" href="HOME.html">
+                            <div class="textNav">HOME</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><div class="textNav">PROTFOLIO</div></a>
+                        <a class="nav-link" href="index.html">
+                            <div class="textNav">PROTFOLIO</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">CONTACT</div></a>
+                        <a class="nav-link" href="javascript:void(0)">
+                            <div class="textNav">CONTACT</div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)"><div class="textNav">ADDRESS</div></a>
+                        <a class="nav-link" href="javascript:void(0)">
+                            <div class="textNav">ADDRESS</div>
+                        </a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -263,16 +273,16 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-xl-12">
-                    <center>
-                        <div class="card" style="width:1600px">
-                            <div class="card-body">
+                <div class="col-xl-12 col-sm-6">
+                    <div class="card" style="width:1885px">
+                        <div class="card-body">
+                            <center>
                                 <h1 class="card-title">- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h1>
                                 <h1 class="card-title">- พื้นฐาน Graphic (Adobe Photoshop,Adobe illustrator,Blender)
                                 </h1>
-                            </div>
+                            </center>
                         </div>
-                    </center>
+                    </div>
                 </div>
             </div>
         </div>
