--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn1" type="button">Register</button>
+                    <button class="btn1" type="button"><a href="HOME.html">Register</a></button>
                 </form>
             </div>
         </div>
@@ -134,31 +134,32 @@
             <div class="row">
                 <div class="col-xl-4 col-md-12">
                     <center>
-                        <img src="picPHONE.webp" alt="" width="300px">
+                        <img src="picPHONE.webp" alt="" width="200px">
+                        <br>
                         <center>
-                            <h1>0829498732</h1>
+                            <h3>0829498732</h3>
                         </center>
                     </center>
                 </div>
                 <div class="col-xl-4 col-md-12">
                     <center>
-                        <img src="picMail.png" alt="" width="410px">
+                        <img src="picMail.png" alt="" width="280px">
                         <center>
-                            <h1>tiradonpermpoonma@gmail.com</h1>
+                            <h3>tiradonpermpoonma@gmail.com</h3>
                         </center>
                     </center>
                 </div>
                 <div class="col-xl-4 col-md-12">
                     <center>
-                        <img src="picAdd.png" alt="" width="300px">
+                        <img src="picAdd.png" alt="" width="190px">
                         <center>
-                            <h1>390 หมู่ 9 จ.เชียงใหม่</h1>
+                            <h3>390 หมู่ 9 จ.เชียงใหม่</h3>
                         </center>
                         <center>
-                            <h1>อ.จอมทอง ต.ข่วงเปา</h1>
+                            <h3>อ.จอมทอง ต.ข่วงเปา</h3>
                         </center>
                         <center>
-                            <h1>50160</h1>
+                            <h3>50160</h3>
                         </center>
                     </center>
                 </div>
@@ -172,21 +173,21 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picC++.png" alt="Card image" width="500px"></center>
+                            <center><img src="picC++.png" alt="Card image" width="400px"></center>
                             <br>
                             <div class="card-body">
-                                <h1 class="card-title">เเข่งทักษะวิชาชีพเขียนโปรแกรม C++</h1>
+                                <h3 class="card-title">เเข่งทักษะวิชาชีพเขียนโปรแกรม C++</h3>
                             </div>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picGA.png" alt="Card image" width="560px"></center>
+                            <center><img src="picGA.png" alt="Card image" width="400px"></center>
                             <br>
                             <div class="card-body">
                                 <h3 class="card-title">เกรด 4</h3>
@@ -205,26 +206,26 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picAdvice.jpg" alt="Card image" width="500px"></center>
+                            <center><img src="picAdvice.jpg" alt="Card image" width="400px"></center>
                             <br>
                             <div class="card-body">
-                                <h1 class="card-title">Advice ช้างเผือก</h1>
-                                <h1 class="card-title">1 กรกฏาคม - 31 สิงหคม 2565</h1>
+                                <h3 class="card-title">Advice ช้างเผือก</h3>
+                                <h3 class="card-title">1 กรกฏาคม - 31 สิงหคม 2565</h3>
                             </div>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picATT.jpg" alt="Card image" width="500px"></center>
+                            <center><img src="picATT.jpg" alt="Card image" width="400px"></center>
                             <br>
                             <div class="card-body">
-                                <h1 class="card-title">ร้านแอทเทค คอมพลีท</h1>
-                                <h1 class="card-title">1 สิงหาคม - 30 กันยายน 2563</h1>
+                                <h3 class="card-title">ร้านแอทเทค คอมพลีท</h3>
+                                <h3 class="card-title">1 สิงหาคม - 30 กันยายน 2563</h3>
                             </div>
                         </div>
                     </center>
@@ -239,9 +240,9 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picSARASAS.png" alt="Card image" width="400px"></center>
+                            <center><img src="picSARASAS.png" alt="Card image" width="300px"></center>
                             <br>
                             <div class="card-body">
                                 <h3 class="card-title">จบการศึกษามัธยมปลายที่</h3>
@@ -253,9 +254,9 @@
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:600px">
+                        <div class="card" style="width:500px">
                             <br>
-                            <center><img src="picLanna.png" alt="Card image" width="526px"></center>
+                            <center><img src="picLanna.png" alt="Card image" width="395px"></center>
                             <br>
                             <div class="card-body">
                                 <h3 class="card-title">ปัจจุบันศึกษาอยู่ที่</h3>
@@ -273,16 +274,23 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-xl-12 col-sm-6">
-                    <div class="card" style="width:1885px">
-                        <div class="card-body">
-                            <center>
-                                <h1 class="card-title">- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h1>
-                                <h1 class="card-title">- พื้นฐาน Graphic (Adobe Photoshop,Adobe illustrator,Blender)
-                                </h1>
-                            </center>
+                <div class="col-xl-6 col-sm-12">
+                    <center>
+                        <div class="card" style="width:500px">
+                            <div class="card-body">
+                                <h3>- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h3>
+                            </div>
                         </div>
-                    </div>
+                    </center>
+                </div>
+                <div class="col-xl-6 col-sm-12">
+                    <center>
+                        <div class="card" style="width:500px">
+                            <div class="card-body">
+                                <h3>- พื้นฐาน Graphic(Photoshop,illustrator,Blender)</h3>
+                            </div>
+                        </div>
+                    </center>
                 </div>
             </div>
         </div>
