--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:400px">
+                        <div class="card" style="width: 300px;">
                             <br>
                             <center><img src="picmale.png" alt="Card image" width="200px"></center>
                             <br>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:400px">
+                        <div class="card" style="width:300px">
                             <br>
                             <center><img src="picCLD.png" alt="Card image" width="230px"></center>
                             <br>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:400px">
+                        <div class="card" style="width:300px">
                             <br>
                             <center><img src="picHeart.webp" alt="Card image" width="200px"></center>
                             <br>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:400px">
+                        <div class="card" style="width:300px">
                             <br>
                             <center><img src="picAGE.png" alt="Card image" width="182px"></center>
                             <br>
@@ -173,25 +173,22 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picC++.png" alt="Card image" width="400px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">เเข่งทักษะวิชาชีพเขียนโปรแกรม C++</h3>
-                            </div>
+                        <br>
+                        <center><img src="picC++.png" alt="Card image" width="200px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">เเข่งทักษะวิชาชีพ</h3>
+                            <h3 class="card-title">เขียนโปรแกรม C++</h3>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picGA.png" alt="Card image" width="400px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">เกรด 4</h3>
-                            </div>
+                        <br>
+                        <center><img src="picGA.png" alt="Card image" width="200px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">เกรด 4</h3>
                         </div>
                     </center>
                 </div>
@@ -206,27 +203,23 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picAdvice.jpg" alt="Card image" width="400px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">Advice ช้างเผือก</h3>
-                                <h3 class="card-title">1 กรกฏาคม - 31 สิงหคม 2565</h3>
-                            </div>
+                        <br>
+                        <center><img src="picAdvice.jpg" alt="Card image" width="250px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">Advice ช้างเผือก</h3>
+                            <h3 class="card-title">1 กรกฏาคม - 31 สิงหคม 2565</h3>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picATT.jpg" alt="Card image" width="400px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">ร้านแอทเทค คอมพลีท</h3>
-                                <h3 class="card-title">1 สิงหาคม - 30 กันยายน 2563</h3>
-                            </div>
+                        <br>
+                        <center><img src="picATT.jpg" alt="Card image" width="250px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">ร้านแอทเทค คอมพลีท</h3>
+                            <h3 class="card-title">1 สิงหาคม - 30 กันยายน 2563</h3>
                         </div>
                     </center>
                 </div>
@@ -240,29 +233,25 @@
             <div class="row">
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picSARASAS.png" alt="Card image" width="300px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">จบการศึกษามัธยมปลายที่</h3>
-                                <h3 class="card-title">โรงเรียนสารสาสน์วิเทศลานนา</h3>
-                                <h3 class="card-title">ปี 2560</h3>
-                            </div>
+                        <br>
+                        <center><img src="picSARASAS.png" alt="Card image" width="200px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">จบการศึกษามัธยมปลายที่</h3>
+                            <h3 class="card-title">โรงเรียนสารสาสน์วิเทศลานนา</h3>
+                            <h3 class="card-title">ปี 2560</h3>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-md-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <br>
-                            <center><img src="picLanna.png" alt="Card image" width="395px"></center>
-                            <br>
-                            <div class="card-body">
-                                <h3 class="card-title">ปัจจุบันศึกษาอยู่ที่</h3>
-                                <h3 class="card-title">วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา</h3>
-                                <h3 class="card-title">ปี 2565</h3>
-                            </div>
+                        <br>
+                        <center><img src="picLanna.png" alt="Card image" width="250px"></center>
+                        <br>
+                        <div class="card-body">
+                            <h3 class="card-title">ปัจจุบันศึกษาอยู่ที่</h3>
+                            <h3 class="card-title">วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา</h3>
+                            <h3 class="card-title">ปี 2565</h3>
                         </div>
                     </center>
                 </div>
@@ -276,19 +265,15 @@
             <div class="row">
                 <div class="col-xl-6 col-sm-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <div class="card-body">
-                                <h3>- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h3>
-                            </div>
+                        <div class="card-body">
+                            <h4>- พื้นฐาน Coding (C++,Python,Java,Mqsql,HTML)</h4>
                         </div>
                     </center>
                 </div>
                 <div class="col-xl-6 col-sm-12">
                     <center>
-                        <div class="card" style="width:500px">
-                            <div class="card-body">
-                                <h3>- พื้นฐาน Graphic(Photoshop,illustrator,Blender)</h3>
-                            </div>
+                        <div class="card-body">
+                            <h4>- พื้นฐาน Graphic(Photoshop,illustrator,Blender)</h4>
                         </div>
                     </center>
                 </div>
